{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 107,
  "lineage": "fc007a6e-ddfb-a2ba-cc7f-11273cf10f4c",
  "resources": [
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09d9d7f3d51b92868",
            "public_dns": "ec2-54-242-135-130.compute-1.amazonaws.com",
            "public_ip": "54.242.135.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-vpc-us-east-1a",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c4771cd5f00b9814",
            "public_dns": "ec2-54-90-229-96.compute-1.amazonaws.com",
            "public_ip": "54.90.229.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "edge-vpc-us-east-1a",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:internet-gateway/igw-06b5d3fa6543ec473",
            "id": "igw-06b5d3fa6543ec473",
            "owner_id": "721411679615",
            "tags": {
              "Name": "app-vpc",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared"
            },
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:internet-gateway/igw-097d478a3f75ef315",
            "id": "igw-097d478a3f75ef315",
            "owner_id": "721411679615",
            "tags": {
              "Name": "edge-vpc",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared"
            },
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d9d7f3d51b92868",
            "id": "nat-0fd2fbae16c2706aa",
            "network_interface_id": "eni-055caa960acc16512",
            "private_ip": "10.0.4.245",
            "public_ip": "54.242.135.130",
            "subnet_id": "subnet-03ebedfcc54a858f7",
            "tags": {
              "Name": "app-vpc-us-east-1a",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared"
            }
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_eip.nat",
            "module.app-cluster.module.vpc.aws_internet_gateway.this",
            "module.app-cluster.module.vpc.aws_subnet.public",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4771cd5f00b9814",
            "id": "nat-009dcea85c3fc7d99",
            "network_interface_id": "eni-03711e4d5bd48fc0c",
            "private_ip": "10.0.4.112",
            "public_ip": "54.90.229.96",
            "subnet_id": "subnet-0b827e5d803cad991",
            "tags": {
              "Name": "edge-vpc-us-east-1a",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared"
            }
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_eip.nat",
            "module.edge-cluster.module.vpc.aws_internet_gateway.this",
            "module.edge-cluster.module.vpc.aws_subnet.public",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b1fd2c33e9799ec91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0fd2fbae16c2706aa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1fd2c33e9799ec9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_eip.nat",
            "module.app-cluster.module.vpc.aws_internet_gateway.this",
            "module.app-cluster.module.vpc.aws_nat_gateway.this",
            "module.app-cluster.module.vpc.aws_route_table.private",
            "module.app-cluster.module.vpc.aws_subnet.public",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b8b4efe8c95ef0ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-009dcea85c3fc7d99",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b8b4efe8c95ef0ef",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_eip.nat",
            "module.edge-cluster.module.vpc.aws_internet_gateway.this",
            "module.edge-cluster.module.vpc.aws_nat_gateway.this",
            "module.edge-cluster.module.vpc.aws_route_table.private",
            "module.edge-cluster.module.vpc.aws_subnet.public",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06b5d3fa6543ec473",
            "id": "r-rtb-017c9893ff6a1b7681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017c9893ff6a1b768",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.app-cluster.module.vpc.aws_internet_gateway.this",
            "module.app-cluster.module.vpc.aws_route_table.public",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-097d478a3f75ef315",
            "id": "r-rtb-0ba4ae8f2a9aa96361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba4ae8f2a9aa9636",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.edge-cluster.module.vpc.aws_internet_gateway.this",
            "module.edge-cluster.module.vpc.aws_route_table.public",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b1fd2c33e9799ec9",
            "owner_id": "721411679615",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-vpc-private",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared"
            },
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b8b4efe8c95ef0ef",
            "owner_id": "721411679615",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "edge-vpc-private",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared"
            },
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-017c9893ff6a1b768",
            "owner_id": "721411679615",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-vpc-public",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared"
            },
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ba4ae8f2a9aa9636",
            "owner_id": "721411679615",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "edge-vpc-public",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared"
            },
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c17bc50b203056b4",
            "route_table_id": "rtb-0b1fd2c33e9799ec9",
            "subnet_id": "subnet-0ffcb214fb93deece"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_route_table.private",
            "module.app-cluster.module.vpc.aws_subnet.private",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c31d78f36c99570b",
            "route_table_id": "rtb-0b1fd2c33e9799ec9",
            "subnet_id": "subnet-0eb694b7131fa1aca"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_route_table.private",
            "module.app-cluster.module.vpc.aws_subnet.private",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06570cfbd975cfaaa",
            "route_table_id": "rtb-0b1fd2c33e9799ec9",
            "subnet_id": "subnet-0f9ed0859ffe8ff19"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_route_table.private",
            "module.app-cluster.module.vpc.aws_subnet.private",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002b2f04a7e8397ae",
            "route_table_id": "rtb-0b8b4efe8c95ef0ef",
            "subnet_id": "subnet-0f621a9d7d4d66c2e"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_route_table.private",
            "module.edge-cluster.module.vpc.aws_subnet.private",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb0f7042dab20100",
            "route_table_id": "rtb-0b8b4efe8c95ef0ef",
            "subnet_id": "subnet-0188585efa7b3d3d8"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_route_table.private",
            "module.edge-cluster.module.vpc.aws_subnet.private",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02210c290eaddc9ad",
            "route_table_id": "rtb-0b8b4efe8c95ef0ef",
            "subnet_id": "subnet-0e64c2acb28e3eef5"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_route_table.private",
            "module.edge-cluster.module.vpc.aws_subnet.private",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e637d1bf56322c4",
            "route_table_id": "rtb-017c9893ff6a1b768",
            "subnet_id": "subnet-03ebedfcc54a858f7"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_route_table.public",
            "module.app-cluster.module.vpc.aws_subnet.public",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c95fa2e5f8f786c",
            "route_table_id": "rtb-017c9893ff6a1b768",
            "subnet_id": "subnet-07e05c515ca5fba03"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_route_table.public",
            "module.app-cluster.module.vpc.aws_subnet.public",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cf065535c2f9102",
            "route_table_id": "rtb-017c9893ff6a1b768",
            "subnet_id": "subnet-00124ac83267abc98"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_route_table.public",
            "module.app-cluster.module.vpc.aws_subnet.public",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04caf075b12907e92",
            "route_table_id": "rtb-0ba4ae8f2a9aa9636",
            "subnet_id": "subnet-0b827e5d803cad991"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_route_table.public",
            "module.edge-cluster.module.vpc.aws_subnet.public",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0decc95fdb7a56f86",
            "route_table_id": "rtb-0ba4ae8f2a9aa9636",
            "subnet_id": "subnet-03b8d47cac0f75848"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_route_table.public",
            "module.edge-cluster.module.vpc.aws_subnet.public",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05075c4c7763b40b3",
            "route_table_id": "rtb-0ba4ae8f2a9aa9636",
            "subnet_id": "subnet-0c87e3f027b2064e5"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_route_table.public",
            "module.edge-cluster.module.vpc.aws_subnet.public",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:security-group/sg-09f47c1c90c5ae210",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09f47c1c90c5ae210",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20200815223922134000000006",
            "name_prefix": "all_worker_management",
            "owner_id": "721411679615",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:security-group/sg-071859b95b6bfaab4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-071859b95b6bfaab4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20200815223917651900000007",
            "name_prefix": "all_worker_management",
            "owner_id": "721411679615",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:security-group/sg-075276a91562ce2c6",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-075276a91562ce2c6",
            "ingress": [],
            "name": "edge-YsDZlHjL20200815223931937500000008",
            "name_prefix": "edge-YsDZlHjL",
            "owner_id": "721411679615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "edge-YsDZlHjL-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:security-group/sg-0c02b0f06fddb32f1",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0c02b0f06fddb32f1",
            "ingress": [],
            "name": "app-ZjT5kVcE20200815223921248400000008",
            "name_prefix": "app-ZjT5kVcE",
            "owner_id": "721411679615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "app-ZjT5kVcE-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.edge-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:security-group/sg-04bc83ea21f8c1857",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04bc83ea21f8c1857",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20200815223921848000000005",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "721411679615",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:security-group/sg-0ce51a845b863a5a6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ce51a845b863a5a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20200815223917650200000005",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "721411679615",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.edge-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:security-group/sg-0e4c580e0086dbe92",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e4c580e0086dbe92",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20200815223922385400000007",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "721411679615",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:security-group/sg-0271c8157d3046d2a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0271c8157d3046d2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20200815223917650200000006",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "721411679615",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:security-group/sg-017e8b192aff737c7",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-017e8b192aff737c7",
            "ingress": [],
            "name": "edge-YsDZlHjL20200815223932186600000009",
            "name_prefix": "edge-YsDZlHjL",
            "owner_id": "721411679615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "edge-YsDZlHjL-eks_worker_sg",
              "kubernetes.io/cluster/edge-YsDZlHjL": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:security-group/sg-05c0e96377c84f606",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-05c0e96377c84f606",
            "ingress": [],
            "name": "app-ZjT5kVcE20200815223921249800000009",
            "name_prefix": "app-ZjT5kVcE",
            "owner_id": "721411679615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "app-ZjT5kVcE-eks_worker_sg",
              "kubernetes.io/cluster/app-ZjT5kVcE": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-815731746",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-075276a91562ce2c6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.edge-cluster.module.eks.aws_security_group.cluster",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4098560442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c02b0f06fddb32f1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.app-cluster.module.eks.aws_security_group.cluster",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3739172836",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075276a91562ce2c6",
            "self": false,
            "source_security_group_id": "sg-017e8b192aff737c7",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.edge-cluster.module.eks.aws_security_group.cluster",
            "module.edge-cluster.module.eks.aws_security_group.workers",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2289435442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c02b0f06fddb32f1",
            "self": false,
            "source_security_group_id": "sg-05c0e96377c84f606",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.app-cluster.module.eks.aws_security_group.cluster",
            "module.app-cluster.module.eks.aws_security_group.workers",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1561311388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-017e8b192aff737c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.edge-cluster.module.eks.aws_security_group.workers",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2688988630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05c0e96377c84f606",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.app-cluster.module.eks.aws_security_group.workers",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3290570462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017e8b192aff737c7",
            "self": false,
            "source_security_group_id": "sg-075276a91562ce2c6",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.edge-cluster.module.eks.aws_security_group.cluster",
            "module.edge-cluster.module.eks.aws_security_group.workers",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-94874407",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05c0e96377c84f606",
            "self": false,
            "source_security_group_id": "sg-0c02b0f06fddb32f1",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.app-cluster.module.eks.aws_security_group.cluster",
            "module.app-cluster.module.eks.aws_security_group.workers",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-4227931612",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017e8b192aff737c7",
            "self": false,
            "source_security_group_id": "sg-075276a91562ce2c6",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.edge-cluster.module.eks.aws_security_group.cluster",
            "module.edge-cluster.module.eks.aws_security_group.workers",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-634879191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05c0e96377c84f606",
            "self": false,
            "source_security_group_id": "sg-0c02b0f06fddb32f1",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.app-cluster.module.eks.aws_security_group.cluster",
            "module.app-cluster.module.eks.aws_security_group.workers",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-734612206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-017e8b192aff737c7",
            "self": false,
            "source_security_group_id": "sg-017e8b192aff737c7",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.edge-cluster.module.eks.aws_security_group.workers",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-813929327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05c0e96377c84f606",
            "self": false,
            "source_security_group_id": "sg-05c0e96377c84f606",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.app-cluster.module.eks.aws_security_group.workers",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-0ffcb214fb93deece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ffcb214fb93deece",
            "map_public_ip_on_launch": false,
            "owner_id": "721411679615",
            "tags": {
              "Name": "app-vpc-private-us-east-1a",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-0eb694b7131fa1aca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0eb694b7131fa1aca",
            "map_public_ip_on_launch": false,
            "owner_id": "721411679615",
            "tags": {
              "Name": "app-vpc-private-us-east-1b",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-0f9ed0859ffe8ff19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f9ed0859ffe8ff19",
            "map_public_ip_on_launch": false,
            "owner_id": "721411679615",
            "tags": {
              "Name": "app-vpc-private-us-east-1c",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-0f621a9d7d4d66c2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f621a9d7d4d66c2e",
            "map_public_ip_on_launch": false,
            "owner_id": "721411679615",
            "tags": {
              "Name": "edge-vpc-private-us-east-1a",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-0188585efa7b3d3d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0188585efa7b3d3d8",
            "map_public_ip_on_launch": false,
            "owner_id": "721411679615",
            "tags": {
              "Name": "edge-vpc-private-us-east-1b",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-0e64c2acb28e3eef5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e64c2acb28e3eef5",
            "map_public_ip_on_launch": false,
            "owner_id": "721411679615",
            "tags": {
              "Name": "edge-vpc-private-us-east-1c",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-03ebedfcc54a858f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-03ebedfcc54a858f7",
            "map_public_ip_on_launch": true,
            "owner_id": "721411679615",
            "tags": {
              "Name": "app-vpc-public-us-east-1a",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-07e05c515ca5fba03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-07e05c515ca5fba03",
            "map_public_ip_on_launch": true,
            "owner_id": "721411679615",
            "tags": {
              "Name": "app-vpc-public-us-east-1b",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-00124ac83267abc98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-00124ac83267abc98",
            "map_public_ip_on_launch": true,
            "owner_id": "721411679615",
            "tags": {
              "Name": "app-vpc-public-us-east-1c",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b82986d835dbad06"
          },
          "dependencies": [
            "module.app-cluster.data.aws_availability_zones.available",
            "module.app-cluster.module.vpc.aws_vpc.this",
            "module.app-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.app-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-0b827e5d803cad991",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b827e5d803cad991",
            "map_public_ip_on_launch": true,
            "owner_id": "721411679615",
            "tags": {
              "Name": "edge-vpc-public-us-east-1a",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-03b8d47cac0f75848",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-03b8d47cac0f75848",
            "map_public_ip_on_launch": true,
            "owner_id": "721411679615",
            "tags": {
              "Name": "edge-vpc-public-us-east-1b",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:subnet/subnet-0c87e3f027b2064e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0c87e3f027b2064e5",
            "map_public_ip_on_launch": true,
            "owner_id": "721411679615",
            "tags": {
              "Name": "edge-vpc-public-us-east-1c",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04cbd7df472fcb330"
          },
          "dependencies": [
            "module.edge-cluster.data.aws_availability_zones.available",
            "module.edge-cluster.module.vpc.aws_vpc.this",
            "module.edge-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.edge-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.app-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.app-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:vpc/vpc-0b82986d835dbad06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db4b4e89fa848fe1",
            "default_route_table_id": "rtb-05e3166c63642a0f4",
            "default_security_group_id": "sg-03453350dc2c7aa36",
            "dhcp_options_id": "dopt-dc5f64a7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b82986d835dbad06",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05e3166c63642a0f4",
            "owner_id": "721411679615",
            "tags": {
              "Name": "app-vpc",
              "kubernetes.io/cluster/app-ZjT5kVcE": "shared"
            }
          },
          "dependencies": [
            "module.app-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.edge-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.edge-cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721411679615:vpc/vpc-04cbd7df472fcb330",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019b3afb972a9cf00",
            "default_route_table_id": "rtb-07a3d9eb2d32e5fef",
            "default_security_group_id": "sg-053c323c840fc2598",
            "dhcp_options_id": "dopt-dc5f64a7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04cbd7df472fcb330",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07a3d9eb2d32e5fef",
            "owner_id": "721411679615",
            "tags": {
              "Name": "edge-vpc",
              "kubernetes.io/cluster/edge-YsDZlHjL": "shared"
            }
          },
          "dependencies": [
            "module.edge-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}